# FairWorkly

./: .gitignore  docker-compose.yml
.github/workflows/: actionlint.yml
agent-service/: README.md  llm.py  main.py  pyproject.toml  readme.md  requirements.txt
agent-service/agents/compliance/: prompt_builder.py  router.py
agent-service/agents/compliance/features/ask_ai_question/: handler.py  schemas.py
agent-service/agents/roster/services/roster_import/: README.md
agent-service/agents/shared/vector_db/: __init__.py
agent-service/tests/: test_master_agent.py
agent-service/tests/compliance/: test_qa.py
backend/: AI_GUIDE.md  CLAUDE.md  Dockerfile
backend/.doc/: AI_GUIDE.md  DEVLOG.md  TEST_PLAN.md
backend/.doc/issues/: ISSUE_03_Handler_API.md
backend/src/FairWorkly.API/: AI_GUIDE.md  Program.cs  appsettings.Development.json
backend/src/FairWorkly.Application/: AI_GUIDE.md  DependencyInjection.cs
backend/src/FairWorkly.Application/Payroll/: AI_GUIDE.md
backend/src/FairWorkly.Infrastructure/: AI_GUIDE.md  DependencyInjection.cs  FairWorkly.Infrastructure.csproj
backend/src/FairWorkly.Infrastructure/Migrations/: 20260124105504_NormalizeTableNamesAndConstraints.cs  20260131000438_MakeEmployeeEmailOptional.cs  (+1 more)
backend/tests/FairWorkly.UnitTests/: AI_GUIDE.md  FairWorkly.UnitTests.csproj
docs/: 02-backend-architecture.md  03-dev-workflow-and-pr.md  README.md
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/app/: App.tsx
frontend/src/services/: setupInterceptors.ts
(+86 files in other folders)
