[tool.poetry]
name = "agent-service"
version = "0.1.0"
description = "FairWorkly master agent service built with FastAPI"
authors = ["FairWorkly Developers <dev@fairworkly.com>"]

[[tool.poetry.packages]]
include = "master_agent"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
